AWS-502: context menu styles fix, table header nowrap

--- a/resources/css/blocks/int-table.styl
+++ b/resources/css/blocks/int-table.styl
@@ -84,6 +84,7 @@
             color var(--tc_text_caption)
             font-size f_normal
             padding 17px 15px
+            white-space nowrap
             
             .tb-sort-button
                 padding 17px 15px
