--- a/resources/css/framework/icons.styl
+++ b/resources/css/framework/icons.styl
@@ -1,7 +1,7 @@
 @font-face
   font-family: "icons"
-  src: url('../fonts/icons.eot?v=1561902590754')
-  src: url('../fonts/icons.eot?v=1561902590754?#iefix') format('eot'), url('../fonts/icons.woff?v=1561902590754') format('woff'), url('../fonts/icons.ttf?v=1561902590754') format('truetype')
+  src: url('../fonts/icons.eot?v=1562076703290')
+  src: url('../fonts/icons.eot?v=1562076703290?#iefix') format('eot'), url('../fonts/icons.woff?v=1562076703290') format('woff'), url('../fonts/icons.ttf?v=1562076703290') format('truetype')
   font-weight: 400
   font-style: normal
 
